# bcrypt-XP

./: CMakeLists.txt  bcrypt.h  dllmain.cpp  framework.h  lib.def
